# crewai_test_limits

./: README.md  crew.md  crewai.md  flow.md  guardrail.md  memory.md  task.md  tool.md
chromadbcrew/: README.md  pyproject.toml
chromadbcrew/knowledge/: crew.json
chromadbcrew/knowledge/chromadb/: chroma.sqlite3
chromadbcrew/memory/: latest_kickoff_task_outputs.db
chromadbcrew/memory/knowledge/: chroma.sqlite3
chromadbcrew/outputs/: report.md
chromadbcrew/src/chromadbcrew/: chromadb_knowledge_source.py  crew.py  knowledge_loader.py  main.py
chromadbcrew/src/chromadbcrew/config/: agents.yaml  tasks.yaml
flow/: README.md  crewai_flow.html  poem.txt  pyproject.toml
flow/memory/: flow_states.db  latest_kickoff_task_outputs.db
flow/src/fruitflow/: main.py
guardrail/: README.md  pyproject.toml
guardrail/memory/: latest_kickoff_task_outputs.db
guardrail/outputs/: blog_post.json  blog_post.md
guardrail/src/testing/: crew.py  main.py
memory/: README.md  fuit_logs.txt  pyproject.toml
memory/knowledge/: fruits.json  fruits_details.json
memory/memory/: latest_kickoff_task_outputs.db  long_term_memory_storage.db
memory/memory/entities/JSON_Manager_Answering/: chroma.sqlite3
memory/memory/knowledge/: chroma.sqlite3
memory/memory/short_term/JSON_Manager_Answering/: chroma.sqlite3
memory/outputs/: report.md
memory/src/memory_0/: crew.py  main.py
memory/src/memory_0/config/: agents.yaml  tasks.yaml
memory/src/memory_0/tools/: json_tools.py
mycrew/: README.md
mycrew/memory/: latest_kickoff_task_outputs.db
mycrew/outputs/: blog_post.md  log.txt
mycrew/src/mycrew/: crew.py  main.py
mycrew/src/mycrew/config/: agents.yaml  tasks.yaml
scripts/: knowledge_loader.py
taskcrew/: README.md  pyproject.toml
taskcrew/memory/: latest_kickoff_task_outputs.db
taskcrew/outputs/: blog_post.md
taskcrew/src/taskcrew/: crew.py  main.py
taskcrew/src/taskcrew/config/: agents.yaml  tasks.yaml
tool/: README.md  pyproject.toml
tool/memory/: latest_kickoff_task_outputs.db
tool/outputs/: homework.md  homework_cache_example.md  log.txt
tool/src/tools/: crew.py  main.py
tool/src/tools/config/: agents.yaml  tasks.yaml
tool/src/tools/tools/: math_tool.py
