[project]
name = "chromadbcrew"
version = "0.1.0"
description = "chromadbcrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "chromadb>=0.5.23",
    "crewai[tools]>=0.100.1,<1.0.0",
]

[project.scripts]
chromadbcrew = "chromadbcrew.main:run"
run_crew = "chromadbcrew.main:run"
train = "chromadbcrew.main:train"
replay = "chromadbcrew.main:replay"
test = "chromadbcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
