[project]
name = "tools"
version = "0.1.0"
description = "tools using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
tools = "tools.main:run"
run_crew = "tools.main:run"
train = "tools.main:train"
replay = "tools.main:replay"
test = "tools.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
